Added more configurations and a simple test in main

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = ststm32
 board = nucleo_f091rc
 framework = cmsis
+build_flags = -O0 -g
+debug_build_flags = -O0 -ggdb3
 upload_command = ${platformio.packages_dir}/tool-openocd/bin/openocd -f openocd.cfg -c "program .pio/build/nucleo_f091rc/firmware.elf verify reset exit"
 debug_server = 
     ${platformio.packages_dir}/tool-openocd/bin/openocd
