--- a/platformio.ini
+++ b/platformio.ini
@@ -8,18 +8,34 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; [env:nucleo_f091rc]
+; platform = ststm32
+; board = nucleo_f091rc
+; framework = cmsis
+; build_flags = -O0 -g
+; debug_build_flags = -O0 -ggdb3
+; upload_command = ${platformio.packages_dir}/tool-openocd/bin/openocd -f openocd.cfg -c "program .pio/build/nucleo_f091rc/firmware.elf verify reset exit"
+; debug_server = 
+;     ${platformio.packages_dir}/tool-openocd/bin/openocd
+;     -f
+;     openocd.cfg
+; upload_protocol = stlink
+; debug_init_break = tbreak main
+; monitor_speed = 115200
+; monitor_eol = LF
+
 [env:nucleo_f091rc]
 platform = ststm32
 board = nucleo_f091rc
 framework = cmsis
-build_flags = -O0 -g
-debug_build_flags = -O0 -ggdb3
-upload_command = ${platformio.packages_dir}/tool-openocd/bin/openocd -f openocd.cfg -c "program .pio/build/nucleo_f091rc/firmware.elf verify reset exit"
+upload_command = openocd -f openocd.cfg -c "program .pio/build/nucleo_f091rc/firmware.elf verify reset exit"
 debug_server = 
     ${platformio.packages_dir}/tool-openocd/bin/openocd
     -f
     openocd.cfg
+build_src_flags = -DSTM32F091 -O0
 upload_protocol = stlink
 debug_init_break = tbreak main
+board_build.f_cpu = 48000000L
 monitor_speed = 115200
 monitor_eol = LF
