--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@
 platform = ststm32
 board = nucleo_f091rc
 framework = cmsis
+; framework = arduino
 upload_command = openocd -f openocd.cfg -c "program .pio/build/nucleo_f091rc/firmware.elf verify reset exit"
 debug_server = 
     ${platformio.packages_dir}/tool-openocd/bin/openocd
