--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stm32f0xx.h": "c"
+        "stm32f0xx.h": "c",
+        "sd_card.h": "c",
+        "string.h": "c"
     }
 }
